# RepoGenome

./: .cursorrules  .gitignore  LICENSE  LLM_INIT_PROMPT.md  README.md  REPOGENOME_PROMPT.md  TEST_RESULTS.md  TEST_RESULTS_v0.8.0.md  pyproject.toml  test_export.edges.csv  test_genome.cypher  test_genome.nodes.csv  test_genome.puml  test_v0.8.0_features.py
.cursor/commands/: check-impact.md  export-genome.md  generate-genome.md  genome-stats.md  get-node.md  query-genome.md  update-genome.md  validate-genome.md
.github/: FUNDING.yml
examples/: sample_genome.json
repogenome/: __init__.py
repogenome/analyzers/: __init__.py  call_graph.py  dependency_resolver.py
repogenome/cli/: __init__.py  main.py  migrate.py  output.py
repogenome/core/: __init__.py  advanced_query.py  cache.py  config.py  db_backend.py  errors.py  generator.py  genome.py  merger.py  metadata.py  query.py  schema.py  streaming.py  watch.py
repogenome/export/: __init__.py  cypher.py  dot.py  graphml.py  plantuml.py
repogenome/mcp/: __init__.py  context_assembler.py  context_cache.py  contract.py  resources.py  server.py  storage.py  tools.py
repogenome/subsystems/: __init__.py  base.py  chronomap.py  contractlens.py  flowweaver.py  intentatlas.py  repospider.py  security.py  testgalaxy.py
repogenome/utils/: __init__.py  field_filter.py  fingerprint.py  git_utils.py  json_diff.py  parallel.py  token_estimator.py
repogenome/visualization/: __init__.py  ragnatela.py
tests/: __init__.py  test_cli.py
tests/test_analyzers/: test_python_ast.py
tests/test_core/: test_advanced_query.py  test_schema.py  test_streaming.py
tests/test_subsystems/: __init__.py  (+2 more)
(+64 files in other folders)
